<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img"
        app:srcCompat="@drawable/img"
        tools:src="@drawable/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/txt_name"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toTopOf="@id/image"
        app:layout_constraintBottom_toTopOf="@id/txt_nim"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/txt_nim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_nim"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/txt_name"
        app:layout_constraintStart_toStartOf="@id/txt_name"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        app:layout_constraintBottom_toBottomOf="@id/image"/>

    <LinearLayout
        android:id="@+id/details_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_location"
                android:layout_marginEnd="16dp"
                app:tint="?android:textColorSecondary"/>
            <TextView
                android:id="@+id/txt_daerah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_daerah"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_major"
                android:layout_marginEnd="16dp"
                app:tint="?android:textColorSecondary"/>
            <TextView
                android:id="@+id/txt_prodi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_prodi"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_hobby"
                android:layout_marginEnd="16dp"
                app:tint="?android:textColorSecondary"/>
            <TextView
                android:id="@+id/txt_hobi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_hobi"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_hobby"
                android:layout_marginEnd="16dp"
                app:tint="?android:textColorSecondary"/>
            <TextView
                android:id="@+id/txt_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_linkedIn"
                android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:contentPadding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_container">

        <TextView
            android:id="@+id/txt_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_quote"
            android:textSize="18sp"
            android:textStyle="italic" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>